# GKlib

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
cmake/: GKlibConfig.cmake.in
test/: CMakeLists.txt
